Histories: use Java 17 features